--- a/templates/admin_cotations.html
+++ b/templates/admin_cotations.html
@@ -22,7 +22,7 @@
 
     {% if cotations %}
     <div class="table-responsive">
-        <table class="table align-middle">
+        <table class="table align-middle table-hover">
             <thead>
                 <tr>
                     <th>ID</th>
@@ -39,7 +39,12 @@
 
             <tbody>
                 {% for c in cotations %}
-                <tr>
+                <tr
+                    {% if 'admin_cotation_detail' in available_endpoints %}
+                    style="cursor:pointer"
+                    onclick="window.location='{{ url_for('admin_cotation_detail', cotation_id=c.id) }}'"
+                    {% endif %}
+                >
 
                     <td class="text-muted">
                         #{{ c.id }}
@@ -51,7 +56,8 @@
 
                     <td>
                         {% if 'client_detail' in available_endpoints %}
-                            <a href="{{ url_for('client_detail', client_id=c.client_id) }}">
+                            <a href="{{ url_for('client_detail', client_id=c.client_id) }}"
+                               onclick="event.stopPropagation();">
                                 {{ c.client_name or ("Client #" ~ c.client_id) }}
                             </a>
                         {% else %}
@@ -83,7 +89,7 @@
                         {% endif %}
                     </td>
 
-                    <td class="text-end">
+                    <td class="text-end" onclick="event.stopPropagation();">
                         <div class="d-inline-flex gap-2">
 
                             <!-- ================= OUVRIR ================= -->
