--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,9 @@
             <div class="logo">S</div>
             <div class="company">
                 <strong>SYNERGYGROUP</strong><br>
-                <small>{{ current_user.username if current_user else "" }}</small>
+                <small>
+                    {{ current_user.username if current_user and current_user.username else "" }}
+                </small>
             </div>
         </div>
 
@@ -85,7 +87,9 @@
     <div class="main-content">
 
         <div class="topbar">
-            <strong>{{ current_user.role|capitalize if current_user else "" }}</strong>
+            <strong>
+                {{ current_user.role|capitalize if current_user and current_user.role else "" }}
+            </strong>
             <span class="role">connecté</span>
         </div>
 
